# ygoutil

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  pyright.yaml  ruff.yaml  test.yaml  test_flow.yaml
src/ygoutil/: card.py  constant.py  dataloader.py  sqlbuilder.py  ygoRoom.py
src/ygoutil/card/: card.py  constant.py  misc.py  unit.py
src/ygoutil/legacy/: card.py
src/ygoutil/source/: baige.py  ourocg.py
src/ygoutil/source/baige/: api.py  misc.py  page.py
tests/: test_cdb.py
tests/test_source/: test_baige.py  test_ourocg.py
