[project]
name = "ygoutil"
version = "0.1.0"
description = "一个 ygo 工具集"
authors = [
    {name = "liggest"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pyright]
typeCheckingMode = "standard"
strictParameterNoneValue = false
reportRedeclaration = false
